@@ -68,6 +68,9 @@
     * Rename 'link_to()' to 'link()', 'link_to_if()' to 'link_if()', and
       'link_to_unless()' to 'link_unless()'. Keep the old names as aliases for
       backward compatibility.
+    * The 'id_format' argument to the 'ModelTags' constructor now uses "{}"
+      string formatting. It still accepts "%s" for backward compatibility and
+      converts it to the newer format.
 
     * Implementation changes:
 
